--- a/package.json
+++ b/package.json
@@ -2,14 +2,19 @@
   "name": "lec-6-seetup-backend-project",
   "version": "1.0.0",
   "description": "a backend at chai aur code channel",
+  "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon src/index.js"
   },
   "keywords": [
     "javascript",
     "backend"
   ],
   "author": "ShahidAli",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "nodemon": "^3.1.10",
+    "prettier": "^3.6.2"
+  }
 }
