ADD USER AND VIDEO MODEL

--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,12 @@
 PORT=8000
 CORS_ORIGIN=*
+
+ACCESS_TOKEN_SECRET=61008ee2c3b0b4c2
+ACCESS_TOKEN_EXPIRY=1d
+REFRESH_TOKEN_EXPIRY=da3639244f93ca26c83a66ff
+REFRESH_TOKEN_EXPIRY=10d
+
+
+
+
 MONGODB_URI=mongodb+srv://shahidali:Shahid2605@cluster0.yedg1vq.mongodb.net
