--- a/.env.sample
+++ b/.env.sample
@@ -6,7 +6,9 @@ ACCESS_TOKEN_EXPIRY=1d
 REFRESH_TOKEN_EXPIRY=da3639244f93ca26c83a66ff
 REFRESH_TOKEN_EXPIRY=10d
 
-
+CLOUDINARY_CLOUD_NAME=
+CLOUDINARY_API_KEY=
+CLOUDINARY_API_SECRET=
 
 
 MONGODB_URI=mongodb+srv://shahidali:Shahid2605@cluster0.yedg1vq.mongodb.net
